<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f5"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/black_333"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="请扫描跟单号"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white_aaa"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_chang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_code"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:textColor="@color/white_aaa"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_below="@id/tv_chang"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/black_999"
            android:visibility="gone"></RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_num1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="0"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_num1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/quality_check_num"
                    android:textColor="@color/white_aaa"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_num2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="0"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_num2"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/quality_bad_num"
                    android:textColor="@color/white_aaa"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_num3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="0"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_num3"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/quality_order_num"
                    android:textColor="@color/white_aaa"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/iv_follow_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/round_bg_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/iv_follow_blue"
                    android:text="@string/quality_follow"
                    android:textColor="@color/black_333"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/quality_scan"
                    android:textColor="@color/white_aaa"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/ll_is_finsihed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_is_finished"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_below="@id/tv_num3"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/quality_finished"
                        android:textColor="@color/white_aaa"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_is_semi"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_below="@id/tv_num3"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/quality_semi_finished"
                        android:textColor="@color/white_aaa"
                        android:textSize="12sp" />
                </LinearLayout>


                <TextView
                    android:id="@+id/tv_camera"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/selector_btn_bg"
                    android:gravity="center"
                    android:text="@string/quality_camera"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_image_list"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="1dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/rg_good_bad"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_good"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:background="@drawable/radiobutton_bg"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:text="@string/quality_good"
                        android:textColor="@drawable/radiobutton_textcolor"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/rb_bad"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        android:background="@drawable/radiobutton_bg"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="6dp"
                        android:text="@string/quality_bad"
                        android:textColor="@drawable/radiobutton_textcolor"
                        android:textSize="18sp" />
                </RadioGroup>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_reason_layout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_bad_green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/round_bg_green" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="8dp"
                        android:layout_toRightOf="@id/iv_bad_green"
                        android:text="@string/quality_bad_cause"
                        android:textColor="@color/black_333"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <org.angmarch.views.NiceSpinner
                        android:id="@+id/spinner_type"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_label_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_bad_sumbit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:background="@drawable/shape_bg_red"
                android:gravity="center"
                android:text="@string/quality_bad_sumbit"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>